[feat] 新增 find-task/apply/:taskId 幫手應徵功能 [fix] findTaskDetails查無對應user帳號時，報錯40200
